--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "url": "https://github.com/okize/hubot-garble/issues"
   },
   "dependencies": {
+    "bluebird": "^2.9.27",
     "coffee-script": "^1.9.3",
     "lodash": "^3.9.3",
     "request": "^2.56.0"
