--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "request": "^2.56.0"
   },
   "devDependencies": {
-    "mocha": "^2.0.0",
-    "chai": "^2.0.0",
-    "sinon-chai": "^2.5.0",
-    "sinon": "^1.8.0"
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.2",
+    "sinon-chai": "^3.3.0"
   }
 }
